[package]
name          = "cw721"
description   = "cw721 NFTs"
authors       = [
  "shahroz hasan khan <sharozx16@gmail.com>",
  
]
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std    = "1.1.3"
cw-utils        = "1.0.0"
cw2             = "0.15.1"
cw721 		      = "0.16.0"
cw-storage-plus = "0.15.1"
schemars        = "0.8.10"
serde           = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror       = { version = "1.0.31" }
getrandom = { version = "0.2", features = ["js"] }
num-traits = "0.2.14"
rand = "0.8.4"
rayon = "1.5.1"
